--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/assets/styles.css">
-        <link rel="stylesheet" href="/assets/base.css">
-        <link rel="stylesheet" href="/assets/base2.css">
-        <link rel="stylesheet" href="/assets/base3.css">
+        <link rel="stylesheet" href="./assets/styles.css">
+        <link rel="stylesheet" href="./assets/base.css">
+        <link rel="stylesheet" href="./assets/base2.css">
+        <link rel="stylesheet" href="./assets/base3.css">
         <title>Mike's static-html demo site</title>
     </head>
     <body>
